--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,11 +54,17 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
     // LiveData
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
-
+    //Corutinas
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.2'
     //Firebase
     implementation 'com.google.firebase:firebase-firestore:22.0.1'
     implementation 'com.google.firebase:firebase-auth:20.0.2'
     implementation 'com.google.firebase:firebase-common-ktx:22.1.2'
+    //Room
+    implementation 'androidx.room:room-ktx:2.2.6'
+    implementation 'androidx.room:room-runtime:2.2.6'
+    kapt 'androidx.room:room-compiler:2.2.6'
+
     //Test
     testImplementation 'junit:junit:4.13.1'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
