--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,10 +48,13 @@ dependencies {
 
     //MVVM
     def core_version = "1.3.2"
-    def lifecycle_version = "2.2.0"
+    def lifecycle_version = "2.3.0-rc01"
     implementation "androidx.core:core-ktx:$core_version"
     // ViewModel
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
+    // viewModels(), FragmentContainerView
+    implementation 'androidx.fragment:fragment-ktx:1.3.0-rc01'
+
     // LiveData
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
     //Corutinas
@@ -59,7 +62,9 @@ dependencies {
     //Firebase
     implementation 'com.google.firebase:firebase-firestore:22.0.1'
     implementation 'com.google.firebase:firebase-auth:20.0.2'
-    implementation 'com.google.firebase:firebase-common-ktx:22.1.2'
+    //Corutinas en Firebase
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.1.1'
+
     //Room
     implementation 'androidx.room:room-ktx:2.2.6'
     implementation 'androidx.room:room-runtime:2.2.6'
